# orca_software

./: CMakeLists.txt  LICENSE  VEDTP.cpp  VEDTP.h  datalogger.cpp  datalogger.h  joystickcontroller.cpp  joystickcontroller.h  link.cpp  link.h  main.cpp  main.qml  opencvimageprovider.cpp  opencvimageprovider.h  qml.qrc  receiver.cpp  receiver.h  videostreamer.cpp  videostreamer.h
